--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/calculator-fill.svg" />
 
     <meta
       name="viewport"
@@ -13,7 +13,7 @@
       name="description"
       content="Calculate your calculative calculations here!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/calculator-fill.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Calculator</title>
   </head>
